# antifraud_service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/src/: main.py  models.py  routers.py  services.py
app/tests/: test_antifraud.py
prometheus/: prometheus.yml
