[project]
name = "antifraud-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "pydantic",
    "python-multipart",
    "redis-py",
    "uvicorn",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "ruff",
]
