[project]
name = "antifraud-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "pydantic",
    "python-multipart",
    "redis>=7.1.0",
    "uvicorn",
]

[dependency-groups]
dev = [
    "black",
    "httpx>=0.28.1",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "ruff",
]
